# devops-system-module

./: .gitignore  .gitlab-ci.yml  .rancher-pipeline.yml  README.md  pyproject.toml  setup.cfg  setup.py
devopsapi_module/: redis.py
devopsapi_module.egg-info/: PKG-INFO  SOURCES.txt
doc/: basic.md
src/devopsapi_module/: __init__.py  gitlab.py  logger.py  mail.py  redis.py
src/devopsapi_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/devopsapi_module/exception/: __init__.py  base.py  mail.py
src/devopsapi_module/module/: config.py  exception.py  request.py  utils.py
src/devopsapi_module/redis/: __init__.py  redis.py
src/iiidevops_api_module_package.egg-info/: PKG-INFO  SOURCES.txt
