[metadata]
name = devopsapi_module
version = 0.0.1
author = iiiorg
author_email = tech@iii-devops.org
description = A package template
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/alod83/package_template
# project_urls =
# Bug Tracker = https://github.com/alod83/package_template/issues
classifiers =
Programming Language :: Python :: 3
Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.9.12
install_requires =
   redis
